refactor: use SequencedCollection API and clean up test imports
Replace deprecated `List.get(0)` calls with `List.getFirst()` across
main and test sources, add missing imports to tests that referenced
fully qualified types inline, and suppress `DataFlowIssue` warnings
on test classes where IntelliJ flags null-safety on Mockito mocks.

Remove the redundant `@NonNull` annotations from `AdminAuthFilter`
parameter overrides since the parent class already declares them.